cmake_minimum_required(VERSION 3.21)
include(CheckIncludeFiles)
include(CheckIncludeFileCXX)
project(CPP-Heap)

set(CMAKE_CXX_STANDARD 17)

CHECK_INCLUDE_FILE_CXX("cassert" ASSERT)
CHECK_INCLUDE_FILE_CXX("functional" FUNCTIONAL)
CHECK_INCLUDE_FILE_CXX("array" ARRAY)
CHECK_INCLUDE_FILE_CXX("cmath" MATH)
CHECK_INCLUDE_FILE_CXX("cstdlib" STDLIB)
CHECK_INCLUDE_FILE_CXX("iostream" IOSTREAM)
CHECK_INCLUDE_FILE_CXX("memory" MEMORY)
CHECK_INCLUDE_FILE_CXX("type_traits" TYPETRAIT)
CHECK_INCLUDE_FILE_CXX("vector" VECTOR)

if(NOT FUNCTIONAL OR NOT ARRAY OR NOT MATH OR NOT STDLIB OR NOT IOSTREAM OR NOT MEMORY OR NOT TYPETRAIT OR NOT VECTOR)
  message(FATAL_ERROR "Cannnot find required headers")
endif(NOT FUNCTIONAL OR NOT ARRAY OR NOT MATH OR NOT STDLIB OR NOT IOSTREAM OR NOT MEMORY OR NOT TYPETRAIT OR NOT VECTOR)


set(CMAKE_CXX_FLAGS "-O3 -fno-exceptions -fno-rtti")


add_executable(cpp-heap debug.h debug.cpp heap.h heap.cpp main.cpp)
